# bsbo-01-22_team1_var13

./: .envrc  .gitignore  Cargo.toml  Im_a_contributer_too  Justfile  README.md  rust-toolchain.toml  Видение.md  Диаграмма последовательности Модерация объявлений.md  Диаграмма последовательности Отслеживание доставки.md  Диаграмма последовательности Оформление заказа  Диаграмма последовательности Оформление заказа.md  Диаграмма последовательности Поиск объявлений.md  Диаграмма последовательности Создание объявления.md  Диаграмма прецедентов.md  Модель предметной области  Модель предметной области.md  Модерация объявлений.md  Отслеживание доставки.md  Оформление заказа.md  Поиск объявлений.md  Покупка объявления.md  Просмотр объявлений.md  Словарь терминов.md  Создание объявления.md
src/: account.rs  advertisement.rs  board.rs  delivery.rs  description.rs  error.rs  item.rs  lib.rs  main.rs  payment.rs  payment_adapter.rs
