[package]
name = "bsbo-01-22-team1-var13"
version = "0.1.0"
edition = "2021"
authors = [
    "Буторин Кирилл",
    "Вартанян Артём",
    "Кирьянов Владимир",
    "Коробко Дмитрий",
    "Чаплыгин Степан",
]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
correctness = "warn"
suspicious = "warn"
style = "warn"
pedantic = "warn"
nursery = "warn"
complexity = "warn"
perf = "warn"
enum_glob_use = { level = "warn", priority = 1 }
match_bool = { level = "allow", priority = 1 }
missing_errors_doc = { level = "allow", priority = 1 }
missing_panics_doc = { level = "allow", priority = 1 }
module_name_repetitions = { level = "allow", priority = 1 }
single_match_else = { level = "allow", priority = 1 }

[dependencies]
chrono = "0.4.38"
color-eyre = "0.6.3"
eyre = "0.6.12"
itertools = "0.13.0"
thiserror = "2.0.3"
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }
uuid = { version = "1.11.0", features = ["v4"] }
